# rust_web_sample

./: .env  Cargo.toml  README.md  TODO.md  note.md
.cargo/: config.toml
.github/workflows/: test.yml
crates/app-service/: Cargo.toml
crates/app-service/src/: lib.rs  login.rs  register_user_name.rs
crates/app-service/src/get_all_post/: service.rs
crates/app-service/src/login/: service.rs
crates/app-service/src/post/: service.rs
crates/app-service/src/register_ng_word/: service.rs
crates/app-service/src/register_user_name/: service.rs
crates/controller/: Cargo.toml
crates/controller/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain-model/: Cargo.toml
crates/domain-model/src/: constants.rs  err.rs  lib.rs  model.rs  post.rs
crates/domain-model/src/get_all_post/: constants.rs  err.rs  model.rs
crates/domain-model/src/login/: err.rs  model.rs
crates/domain-model/src/post/: err.rs  model.rs
crates/domain-model/src/register_ng_word/: constants.rs  err.rs  model.rs
crates/domain-model/src/register_user_name/: constants.rs  model.rs
crates/domain-service/: Cargo.toml
crates/domain-service/src/: get_all_post.rs  lib.rs  login.rs  post.rs  register_user_name.rs  repository.rs  service.rs
crates/domain-service/src/get_all_post/: repository.rs  service.rs
crates/domain-service/src/login/: repository.rs  service.rs
crates/domain-service/src/post/: repository.rs  service.rs
crates/domain-service/src/register_ng_word/: repository.rs  service.rs
crates/domain-service/src/register_user_name/: repository.rs  service.rs
crates/infra/: Cargo.toml
crates/infra/src/: entity.rs  lib.rs  repository_impl.rs
crates/infra/src/entity/: m_ng_word.rs  m_user_name.rs  t_post.rs
crates/infra/src/repository_impl/: get_all_post_repository_impl.rs  login_repository_impl.rs  post_repository_impl.rs  register_ng_word_repository_impl.rs  register_user_name_repository_impl.rs
crates/interface/: Cargo.toml
crates/interface/src/: get_all_post.rs  lib.rs  login.rs  post.rs  register_ng_word.rs  register_user_name.rs
crates/interface/src/get_all_post/: interface.rs
crates/interface/src/login/: interface.rs
crates/interface/src/post/: interface.rs
crates/interface/src/register_ng_word/: interface.rs
crates/interface/src/register_user_name/: interface.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user_ng_word.rs  m20241231_061508_post.rs  m20250123_074710_modify_ng_word_created_user_id_type.rs
src/: main.rs
