[package]
name = "rust_web_sample"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
sea-orm = { version = ">=1.0.0", features = [
  "sqlx-mysql",
  "runtime-tokio-native-tls",
  "macros",
  "debug-print"
] }
tracing = ">=0.1.40"
tracing-subscriber = ">=0.3.18"
tokio = "1.42.0"
dotenv = ">=0.15.0"
interface = { path = "crates/interface" }
anyhow = "1.0.94"

[workspace]
members = [
  ".",
  "crates/*",
  "migration/"
]
default-members = [
  ".",
  "crates/*",
  "migration/"
]
