[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = ">=1.0.0", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
  "debug-print"
] }
domain-model = { path = "../domain-model" }
domain-service = { path = "../domain-service" }
app-service = { path = "../app-service" }
async-trait = "0.1.83"
tracing = ">=0.1.40"
tracing-subscriber = ">=0.3.18"