[package]
name = "interface"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
tokio = { version = "1.42.0", features = ["full"]}
actix-web = "4.9.0"
serde = "1.0.216"
app-service = { path = "../app-service" }
domain-model = { path = "../domain-model" }
chrono = "0.4.39"

[dev-dependencies]
mockall = "0.13.1"
